# ai-warden

./: .gitignore  404.html  LICENSE  README.md  aiwarden.pth  index.html  mkdocs.yml  pyproject.toml  run_demo.sh  sitemap.xml
.aiwarden/: policies.yaml
.github/workflows/: docs.yml  release.yml
advanced/architecture/: index.html
advanced/module-policy/: index.html
advanced/run-tracking/: index.html
advanced/streaming/: index.html
aiwarden/: __init__.py  bootstrap.py  capture.py  config.py  cost.py  event.py  redis_client.py  runner.py  session.py  tags.py
aiwarden/patchers/: _common.py  anthropic.py  openai.py
aiwarden/pipeline/: __init__.py  base.py  engine.py
aiwarden/policies/: __init__.py  base.py  engine.py  loader.py
benchmarks/: BENCHMARK_RESULTS.md  baseline.json  check_regression.py  conftest.py  perf_validation.py  profile_engine.py  test_functional.py  test_load.py  test_memory.py
concepts/: index.html
configuration/: index.html
demos/: multi_agent_live.py
docs/: architecture.md  concepts.md  configuration.md  hot-mode.md  index.md  multi-agent.md  policy-engine.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: concepts.mdx  configuration.mdx  getting-started.mdx  hot-mode.mdx  introduction.mdx  multi-agent.mdx
docs/advanced/: architecture.md  module-policy.md  run-tracking.md  streaming.md
docs/examples/: custom-rules.md  multi-agent-budget.md  single-agent.md
docs/getting-started/: concepts.md  install.md  quickstart.md
docs/guides/: budget.md  custom-policies.md  multi-agent.md  pii.md  tools.md
docs/policies/: agent-control.md  budget.md  custom.md  overview.md  pii.md  tools.md
docs/reference/: configuration.md  events.md  policy-types.md  (+1 more)
hot-mode/: index.html
multi-agent/: index.html
search/: search_index.json
tests/: chatbot_policy_demo.py  conftest.py  simulate_agent_run.py  simulate_raw_agent.py  test_agent.py  test_agent_control.py  test_app.py  test_async_isolation.py  test_capture.py  test_custom_policy.py  test_distributed_budget.py  test_hot_mode.py  test_multi_agent.py  test_openai_patcher.py  test_policy.py  test_policy_loading.py  test_real_agent_loop.py  test_rule_policy.py  test_run_completion.py  test_session_tracking.py  test_streaming.py
(+39 files in other folders)
